--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">ArmStarter</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
+    <string name="nav_header_title" translatable="false">ArmStarter project</string>
+    <string name="nav_header_subtitle" translatable="false">ArmStarter@w-arm.ru</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="app_LeftMenu_f1">Training</string>
+    <string name="app_stats">Stats</string>
+    <string name="action_about">About</string>
+    <string name="app_info">Information</string>
+    <string name="app_exit">Exit</string>
 </resources>
