--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">ArmStarter</string>
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
-    <string name="nav_header_title" translatable="false">ArmStarter project</string>
-    <string name="nav_header_subtitle" translatable="false">ArmStarter@w-arm.ru</string>
+    <string name="nav_header_title" translatable="false">Петя Быстрых</string>
+    <string name="nav_header_subtitle">All in your hands!</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="app_LeftMenu_f1">Training</string>
@@ -11,4 +11,5 @@
     <string name="action_about">About</string>
     <string name="app_info">Information</string>
     <string name="app_exit">Exit</string>
+    <string name="app_maintext">Your armwrestling data</string>
 </resources>
