--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -7,6 +7,6 @@
     <string name="action_about">О проекте</string>
     <string name="app_info">Узнать больше</string>
     <string name="app_exit">Выход</string>
-    <string name="nav_header_subtitle" translatable="false">Все в твоих руках!</string>
     <string name="app_maintext">Твои данные</string>
+    <string name="nav_header_subtitle">все в втоих руках!</string>
 </resources>
