--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Петя Быстрых</string>
-    <string name="nav_header_subtitle">All in your hands!</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="app_LeftMenu_f1">Training</string>
@@ -12,4 +11,6 @@
     <string name="app_info">Information</string>
     <string name="app_exit">Exit</string>
     <string name="app_maintext">Your armwrestling data</string>
+    <string name="app_top100" translatable="false">Top 100</string>
+    <string name="nav_header_subtitle">all in your hands</string>
 </resources>
